<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HomeActivity">

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:orderInCategory="1"
        android:icon="@drawable/ic_search_action"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_cart"
        android:title="@string/action_cart"
        android:orderInCategory="2"
        android:icon="@drawable/ic_shopping_bag"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_overflow"
        android:orderInCategory="3"
        android:icon="@drawable/ic_overview_action"
        app:showAsAction="always"
        android:title="">
        <menu>
            <item
                android:id="@+id/action_userInfo"
                android:title="@string/action_userInfo"
                android:orderInCategory="1"
                android:icon="@drawable/ic_user_info"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_wishlist"
                android:title="@string/action_wishlist"
                android:orderInCategory="2"
                android:icon="@drawable/ic_filled_wishlist"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_faq"
                android:title="@string/action_faq"
                android:orderInCategory="2"
                android:icon="@drawable/ic_faq_action"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_contact_us"
                android:title="@string/action_contact_us"
                android:orderInCategory="2"
                android:icon="@drawable/ic_contact_us"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_settings"
                android:title="@string/action_settings"
                android:orderInCategory="2"
                android:icon="@drawable/ic_settings_action"
                android:visible="false"
                app:showAsAction="never" />

        </menu>
    </item>
</menu>
